fix: set code block language correctly and add more tests

--- a/pandoc-confluence.cabal
+++ b/pandoc-confluence.cabal
@@ -29,6 +29,7 @@ library
       Confluence.Block
       Confluence.Html
       Confluence.Inline
+      Confluence.Params
       Confluence.Tag
       Confluence.Writer
   other-modules:
