--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ dependencies:
   - text
 
 default-extensions:
+  - ImportQualifiedPost
   - OverloadedStrings
   - RecordWildCards
   - TypeSynonymInstances
