--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -16,10 +16,6 @@ jobs:
           ./${FOURMOLU} --mode check $(git ls-files '*.hs')
 
   build:
-    strategy:
-      matrix:
-        resolver:
-          - stack
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -30,9 +26,19 @@ jobs:
       - name: Install GHC
         run: |
           export PATH=$HOME/.local/bin:$PATH
-          stack --stack-yaml=${{ matrix.resolver }}.yaml --install-ghc setup
+          stack --install-ghc setup
       - name: Build
         run: |
           export PATH=$HOME/.local/bin:$PATH
-          stack --stack-yaml=${{ matrix.resolver }}.yaml build --fast
-          stack --stack-yaml=${{ matrix.resolver }}.yaml test --fast
+          stack build --fast
+          stack test --fast
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run tests
+        run: |
+          export PATH=$HOME/.local/bin:$PATH
+          make test
