--- a/pandoc-confluence.cabal
+++ b/pandoc-confluence.cabal
@@ -44,6 +44,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , megaparsec
     , pandoc-types
     , text
   default-language: Haskell2010
@@ -62,6 +63,7 @@ executable pandoc-confluence
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , megaparsec
     , pandoc-confluence
     , pandoc-types
     , text
