test: add `doctest`

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Install Haskell Stack
         run: |
           which stack || curl -sSL https://get.haskellstack.org/ | sh
@@ -37,8 +37,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Run tests
         run: |
           export PATH=$HOME/.local/bin:$PATH
-          make test
+          make test-all
